# rnsd-menubar

./: .gitignore  README.md  RNSD.spec  pyproject.toml  rns_icon.icns  rnsd_menubar.py
assets/web/: micron-parser.js  micron-parser.min.js  renderer.html
docs/: rns-url-scheme-feature-request.md
