[project]
name = "rnsd-menubar"
version = "1.0.0"
description = "macOS menu bar app for the Reticulum Network Stack daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Varna9000" },
]
dependencies = [
    "rns>=0.9.0",
    "rumps>=0.4.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[dependency-groups]
build = [
    "pyinstaller>=6.0",
]

[tool.uv]
package = false
